<resources>
    <string name="app_name">AntonsSkafferiAppliaktion</string>
    <string name="hello_group_2">Hello Group 2!</string>
    <string name="bord_1">Bord 1</string>
    <string name="bord_3">Bord 3</string>
    <string name="bord_2">Bord_2</string>
    <string name="foodready">foodready</string>
    <string name="image">image</string>
    <string name="table_1">Bord 1</string>
    <string name="table_2">Bord 2</string>
    <string name="table_3">Bord 3</string>
    <string name="table_4">Bord 4</string>
    <string name="table_5">Bord 5</string>
    <string name="table_6">Bord 6</string>
    <string name="X">X</string>
    <string name="lasagnaaaa">LASAGNAAAA</string>
    <string name="f_rr_tt">Förrätt</string>
    <string name="Varmrätt">Varmrätt</string>
    <string name="pizza">Pizza</string>
    <string name="lasagn">LASAGN</string>
    <string name="lax_med_potatis">Lax med Potatis</string>
    <string name="plankstek">Plankstek</string>
    <string name="hamburgare">Hamburgare</string>
    <string name="sallad">Sallad</string>
    <string name="dryck">Dryck</string>
    <string name="Förrätt" />
    <string name="Efterrätt" />
    <string name="send_order">SEND ORDER</string>
    <string name="Lunch" />

    <string-array name="names">
        <item>Jonathan</item>
        <item>Andreas</item>
        <item>Felicia</item>
        <item>Engin</item>
        <item>Martin</item>
        <item>Nitram</item>
    </string-array>
</resources>
