<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="1250dp"
    android:layout_height="850dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">


    <!-- this is a comment -->
    <TextView
        android:id="@+id/close_popup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="@string/X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Header with choices of different types of orders drinks, varmrätt etc. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1">
            <Button
                android:background="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/dryck"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Förrätt"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <Button
                android:background="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/Varmrätt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <Button
                android:background="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/Efterrätt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Food menu click to add to the order list -->
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/dricka_alt"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:textStyle="bold"
                android:text="@string/lasagn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>
            <Button
                android:textStyle="bold"
                android:text="@string/sallad"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>
            <Button
                android:textStyle="bold"
                android:text="@string/hamburgare"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>
            <Button
                android:textStyle="bold"
                android:text="@string/plankstek"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>
            <Button
                android:textStyle="bold"
                android:text="@string/lax_med_potatis"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="100dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

