<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/popUp_btn1"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@color/white"
        android:text="@string/table_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button2schedule"
        android:layout_width="394dp"
        android:layout_height="84dp"
        android:background="@color/cardview_light_background"
        android:text="SCHEDULE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/popUp_btn2"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@color/white"
        android:text="@string/table_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/popUp_btn3"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@color/white"
        android:text="@string/table_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/popUp_btn4"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@color/white"
        android:text="@string/table_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/popUp_btn5"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="750dp"
        android:background="@color/white"
        android:text="@string/table_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popUp_btn6"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:background="@color/white"
        android:text="@string/table_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="177dp"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/listOrderReadyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider = "#F00"
            android:dividerHeight = "1dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/popDeliveredTableButton"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Leverera maträtt högts upp i listan"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>